[gd_scene load_steps=3 format=2]

[ext_resource path="res://Minigames/multipleChooise/mc.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Historia/bg_school_room2_yuyake.jpg" type="Texture" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="BgSchoolRoom2Yuyake" type="Sprite" parent="."]
position = Vector2( 639.667, 360 )
scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 173.0
margin_top = 64.0
margin_right = 1319.0
margin_bottom = 129.0
text = "pregunta"

[node name="Button1" type="Button" parent="."]
margin_left = 200.0
margin_top = 250.0
margin_right = 650.0
margin_bottom = 300.0

[node name="Button2" type="Button" parent="."]
margin_left = 200.0
margin_top = 350.0
margin_right = 650.0
margin_bottom = 400.0

[node name="Button3" type="Button" parent="."]
visible = false
margin_left = 200.0
margin_top = 450.0
margin_right = 650.0
margin_bottom = 500.0

[node name="Button4" type="Button" parent="."]
visible = false
margin_left = 200.0
margin_top = 550.0
margin_right = 650.0
margin_bottom = 600.0

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
